Информация о пагинации в заголовках, интерфейсы для мапперов, @SuppressWarnings для неиспользуемых методов
